--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "@tailwindcss/forms": "^0.3.3",
     "@tsconfig/svelte": "^2.0.1",
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
@@ -20,5 +21,9 @@
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.1.5",
+    "uuid": "^8.3.2"
   }
 }
